# scouts-edge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202607040001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/analytics/: __init__.py  match.py  tactical_summary.py
backend/app/api/: health.py  matches.py  predictions.py  reports.py  teams.py  tournament.py
backend/app/core/: __init__.py  config.py
backend/app/db/: base.py
backend/app/ingestion/: __init__.py  providers.py  seed_world_cup.py  squad_importer.py
backend/app/models/: __init__.py  football.py
backend/app/predictions/: __init__.py  goal_types.py  match.py  scorers.py  single_tournament.py  tournament.py
backend/app/reports/: narrative.py
backend/app/schemas/: common.py
backend/app/services/: demo_data.py
backend/app/tests/: test_analytics.py  test_api.py  test_predictions.py  test_single_tournament.py
data/seed/: player_profiles.csv  team_ratings.csv
docs/: architecture.md  data-model.md  deployment.md  prediction-model.md  tournament-simulation.md
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/matches/: page.tsx
frontend/components/: Charts.tsx  MetricCard.tsx  Nav.tsx  ProbabilityBar.tsx  SingleTournamentSimulation.tsx
frontend/lib/: api.ts
frontend/types/: api.ts
(+4 files in other folders)
