[project]
name = "scouts-edge-backend"
version = "0.1.0"
description = "FastAPI backend for The Scout's Edge football analytics dashboard"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.111.0",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.7.4",
  "pydantic-settings>=2.3.4",
  "sqlalchemy>=2.0.31",
  "uvicorn[standard]>=0.30.1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.2",
  "ruff>=0.5.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.ruff]
line-length = 300
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
